# blaze-keys

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  NOTES  README.md
.github/workflows/: release.yml
dev/: NOTES.md  TEST.md
docs/: docker.md  macos_terminal_setup.md  tutorial.md
example-configs/templates/: global.all.yml  global.minimal.yml  global.small.yml  local.yml
res/tutorial/: makefile
src/: cli.rs  configs.rs  dev.rs  keys.rs  lib.rs  main.rs  nodes.rs  nu_hook.rs  panic.rs  shell.rs  tui.rs  yml.rs  zsh_hook.rs
src/shell/: nu_hook.rs  zsh_hook.rs
