[package]
name = "blaze-keys"
version = "0.2.2"
edition = "2024"
default-run = "blz"
license = "MIT"
categories = ["command-line-utilities"]
description = "Zsh plugin for blazing fast Zsh commands, providing customizable leader-key combos and project-specific keybinds."
repository = "https://github.com/enhanced-primate/blaze-keys"
exclude = ["res", "docs"]

[[bin]]
name = "blz"
path = "src/main.rs"

[[bin]]
name = "tut"
path = "src/bin/tutorial.rs"

[dependencies]
anyhow = "1.0.100"
box_drawing = "0.1.2"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
flexi_logger = "0.31.7"
fnv = "1.0.7"
glob = "0.3.3"
itertools = "0.14.0"
libc = "0.2.178"
log = "0.4.29"
once_cell = "1.21.3"
phf = { version = "0.13.1", features = ["macros", "phf_macros"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yml = "0.0.12"
shellexpand = "3.1.1"
termion = "4.0.6"
thiserror = "2.0.17"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
